# latexport

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SPECS.md  config.py  create_main_index.py  main.py  pyproject.toml  zip_project.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-pages.yml
examples/: README.md
examples/output/: index.html
examples/output/css/: custom.css
examples/output/hermish-proofs-notes/: index.html
examples/output/js/: custom.js  mathjax-config.js
examples/output/latex2e-testmath/: index.html
latexml/: amsmath-compat.ltxml
latexport/: config.py  create_main_index.py  embed_assets.py  main.py  zip_project.py
latexport/static/css/: custom.css
latexport/static/js/: custom.js  mathjax-config.js
static/js/: custom.js
tests/: test_create_main_index.py  test_embed_assets.py  test_main.py  test_zip_project.py
texport/: config.py  zip_project.py
texport/latexml/: emph-in-math.ltxml
texport/static/css/: custom.css
texport/static/js/: mathjax-config.js
texport/templates/: main_index_template.html
