[project]
name = "latexport"
version = "2026.3.0"
description = "Convert LaTeX documents to accessible HTML with PDF output"
authors = [{ name = "Kana Nadarajan", email = "clean.wood0319@fastmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
]

[project.urls]
Homepage   = "https://github.com/kalv25/texport"
Repository = "https://github.com/kalv25/texport"
Issues     = "https://github.com/kalv25/texport/issues"
Changelog  = "https://github.com/kalv25/texport/blob/main/CHANGELOG.md"

[project.scripts]
texport        = "texport.main:process_files"
texport-index  = "texport.create_main_index:main"
texport-clean  = "texport.main:clean_logs"
texport-bundle = "texport.embed_assets:main"

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "pyright>=1.1.408",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.7",
]

[tool.setuptools.packages.find]
include = ["texport*"]

[tool.setuptools.package-data]
texport = ["static/**/*", "templates/**/*", "latexml/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyright]
venvPath = "."
venv = ".venv"
