[project]
name = "latexport"
version = "2026.3.0"
description = "Convert LaTeX documents to accessible HTML with PDF output"
authors = [{ name = "Kana Nadarajan", email = "clean.wood0319@fastmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
]

[project.urls]
Homepage   = "https://github.com/kalv25/texport"
Repository = "https://github.com/kalv25/texport"
Issues     = "https://github.com/kalv25/texport/issues"
Changelog  = "https://github.com/kalv25/texport/blob/main/CHANGELOG.md"

[project.scripts]
latexport        = "latexport.main:process_files"
latexport-index  = "latexport.create_main_index:main"
latexport-clean  = "latexport.main:clean_logs"
latexport-bundle = "latexport.embed_assets:main"

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "pyright>=1.1.408",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.7",
]

[tool.setuptools.packages.find]
include = ["latexport*"]

[tool.setuptools.package-data]
latexport = ["static/**/*", "templates/**/*", "latexml/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pyright]
venvPath = "."
venv = ".venv"
